
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static void srt_move_cb(void *priv, int x1, int y1, int x2, int y2,
                        int t1, int t2)
{


}
